Se agrego seccion de qualification

--- a/index.html
+++ b/index.html
@@ -325,7 +325,153 @@
 
             <!--==================== QUALIFICATION ====================-->
             <section class="qualification section">
+                <h2 class="section__title">Qualification</h2>
+                <span class="section__subtitle">My personal journey</span>
 
+                <div class="qualification__container container">
+                    <div class="qualification__tabs">
+                        <div class="qualification__button button--flex qualification__active" data-target="#education">
+                            <i class="uil uil-graduation-cap qualification__icon"></i>
+                            Education
+                        </div>
+                        <div class="qualification__button button--flex" data-target="#work">
+                            <i class="uil uil-briefcase-alt qualification__icon"></i>
+                            Work
+                        </div>
+                    </div>
+
+                        <div class="qualification__sections">
+                            <!--==================== QUALIFICATION CONTENT 1 ====================-->
+                            <div class="qualification__content qualification__active" data-content id="education">
+                                <!--==================== QUALIFICATION 1 ====================-->
+                                <div class="qualification__data">
+                                    <div>
+                                        <h3 class="qualification__title">Computer Enginner</h3>
+                                        <span class="qualification__subtitle">UTCGG - Universidad Tecnologica de la Costa Grande de Guerrero</span>
+                                        <div class="qualification__calendar">
+                                            <i class="uil uil-calendar-alt"></i>
+                                            2015 - 2019
+                                        </div>
+                                    </div>
+
+                                    <div>
+                                        <span class="qualification__rounder"></span>
+                                        <div class="qualification_line"></div>
+                                    </div>
+                                </div>
+                                <!--==================== QUALIFICATION 2 ====================-->
+                                <div class="qualification__data">
+                                    <div></div>
+
+                                    <div>
+                                        <span class="qualification__rounder"></span>
+                                        <div class="qualification_line"></div>
+                                    </div>
+
+                                    <div>
+                                        <h3 class="qualification__title">TSU. Tecnologias de la Informacion</h3>
+                                        <span class="qualification__subtitle">Universidad Tecnologica de Acapulco</span>
+                                        <div class="qualification__calendar">
+                                            <i class="uil uil-calendar-alt"></i>
+                                            20018 - 2019
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--==================== QUALIFICATION 3 ====================-->
+                                <div class="qualification__data">
+                                    <div></div>
+
+                                    <div>
+                                        <span class="qualification__rounder"></span>
+                                        <div class="qualification_line"></div>
+                                    </div>
+
+                                    <div>
+                                        <h3 class="qualification__title">Web Developer</h3>
+                                        <span class="qualification__subtitle">SEG - Secretaria de Educacion Guerrero</span>
+                                        <div class="qualification__calendar">
+                                            <i class="uil uil-calendar-alt"></i>
+                                            2019 - Actually
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--==================== QUALIFICATION 4 ====================-->
+                                <div class="qualification__data">
+                                    <div></div>
+                                    
+                                    <div>
+                                        <span class="qualification__rounder"></span>
+                                        <!-- <div class="qualification_line"></div> -->
+                                    </div>
+
+                                    <div>
+                                        <h3 class="qualification__title">Mobile Developer</h3>
+                                        <span class="qualification__subtitle">Freelance</span>
+                                        <div class="qualification__calendar">
+                                            <i class="uil uil-calendar-alt"></i>
+                                            2020 - Actually
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--==================== QUALIFICATION CONTENT 2 ====================-->
+                            <div class="qualification__content" data-content id="work">
+                                <!--==================== QUALIFICATION 1 ====================-->
+                                <div class="qualification__data">
+                                    <div>
+                                        <h3 class="qualification__title">Computer Enginner</h3>
+                                        <span class="qualification__subtitle">UTCGG - Universidad Tecnologica de la Costa Grande de Guerrero</span>
+                                        <div class="qualification__calendar">
+                                            <i class="uil uil-calendar-alt"></i>
+                                            2015 - 2019
+                                        </div>
+                                    </div>
+
+                                    <div>
+                                        <span class="qualification__rounder"></span>
+                                        <div class="qualification_line"></div>
+                                    </div>
+                                </div>
+                                <!--==================== QUALIFICATION 2 ====================-->
+                                <div class="qualification__data">
+                                    <div></div>
+
+                                    <div>
+                                        <span class="qualification__rounder"></span>
+                                        <div class="qualification_line"></div>
+                                    </div>
+
+                                    <div>
+                                        <h3 class="qualification__title">Mobile developer</h3>
+                                        <span class="qualification__subtitle">Jalisco - Karaokulta</span>
+                                        <div class="qualification__calendar">
+                                            <i class="uil uil-calendar-alt"></i>
+                                            20018 - 2019
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--==================== QUALIFICATION 3 ====================-->
+                                <div class="qualification__data">
+                                    <div></div>
+
+                                    <div>
+                                        <span class="qualification__rounder"></span>
+                                        <!-- <div class="qualification_line"></div> -->
+                                    </div>
+
+                                    <div>
+                                        <h3 class="qualification__title">Web Developer</h3>
+                                        <span class="qualification__subtitle">SEG - Secretaria de Educacion Guerrero</span>
+                                        <div class="qualification__calendar">
+                                            <i class="uil uil-calendar-alt"></i>
+                                            2019 - Actually
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                </div>
 
             </section>
 
